修复对话历史记录显示问题，对话显示效果，修改主题色、优化显示效果